Added magnifying glass to the search field

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 				<div class="panel">
 					<h1>mishear.me</h1>
 					<input type="text" class="input-text oversize large" placeholder="What should I mishear?" />
+					<div class="search"></div>
 				</div>
 			</div>
 		</div>
